Issue #14368: _PyTime_gettimeofday() cannot fail

floattime() must not raise an error if the current time is 1970.1.1 at 00:00.